# code-indexer

./: README.md  pyproject.toml
src/code_indexer/: __init__.py  __main__.py  _indexer.py  cli.py  highlight.py  indexer.py
tests/: example.py  test_indexer.py
