[project]
name = "code-indexer"
version = "0.1.0"
description = "Extract structural skeletons from Python files for LLM context"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
]

[project.scripts]
code-indexer = "code_indexer.cli:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
